--- a/metadata.yaml
+++ b/metadata.yaml
@@ -23,6 +23,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'D501'
 - !lcsh 'World War, 1914-1918'
+- GITenberg
 title: 'New York Times Current History: The European War, Vol. 8, Pt. 2, No. 1, July
   1918'
 url: http://www.gutenberg.org/ebooks/45785
